--- a/web_socket/package.xml
+++ b/web_socket/package.xml
@@ -8,8 +8,10 @@
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <build_depend>rclcpp</build_depend>
+  <exec_depend>rclcpp</exec_depend>
 
-
+  <depend>yaml-cpp</depend>
   <depend>mycan_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>sensor_msgs</depend>
