--- a/web_socket/config/poses.yaml
+++ b/web_socket/config/poses.yaml
@@ -8,18 +8,18 @@ poses:
       orientation_z: 0.04496333854008627
       orientation_w: 0.9989886376667803
   - pose_2:
-      position_x: 66273.9453125
-      position_y: 42482.62890625
-      position_z: 0.0
+      position_x: 66290.4375
+      position_y: 42425.66796875
+      position_z: 30.2772
       orientation_x: 0.0
       orientation_y: 0.0
-      orientation_z: 0.9996679511530251
-      orientation_w: -0.02576795369277417
+      orientation_z: 1.0
+      orientation_w: 6.123233995736766e-17
 returnPoint:
-  position_x: 1.0
-  position_y: 1.0
-  position_z: 1.0
+  position_x: 66271.3359375
+  position_y: 42482.56640625
+  position_z: 30.8577
   orientation_x: 0.0
   orientation_y: 0.0
-  orientation_z: 1.0
+  orientation_z: 0.0
   orientation_w: 1.0
